        Add GSkymap::extract() method (#1442)
        Implement GApplicationPar range checking (#285)
        Forbid appending to text, comment and PI XML nodes (#804)
        Increase precision for diffuse model Npred computation (#1248)
        Implement observation definition reader/writer (#1429)
        Remove etrue flag from CTA background IRF (#1437)


2015-01-07  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix version 0.9.1 released
        ================================

        Fixed bug #1383 (unit test error with recent gcc compiler)


2014-11-13  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.9.0 released
        ========================

        Add energy dispersion to CTA module
        Add pointing table support to CTA module
        Add event filtering for binned analysis
        Add +=, -=, *= and /= operators to GSkymap
        Add integration status tracking to GIntegral
        Add GCTAExposure and GCTAMeanPsf classes
        Add ts and tscalc attributes to GModel and use them in models
        Add manipulation methods to GCTAResponseTable
        Add read(), write() and save() methods to GCTAPsf2D and GCTAPsfKing
        Add classname() method to all classes
        Add utc() methods to GTime class
        Add hierachical element access methods to GXml and GXmlNode
        Add table creation and saving methods to GCsv class
        Add predefined entity support to XML module
        Read/write altitude and azimuth attributes of CTA data
        Refactor CTA response class, add GCTAResponseCube class
        Improve CTA response computation for extended models
        Implement CTA stacked analysis
        Optimize CTA binned and stacked analysis
        LM optimizer now allows logL decreases up to 1.0
        Load events only when needed into GCTAObservation
        Implement full automatic typecasting in Python module
        Fill DETX and DETY values in GCTAResponseIrf::mc 